# PT-Pump-Up

./: .gitignore  LICENSE  README.md  setup.py
package/: .gitignore  setup.py
package-admin/: .env.example  .gitignore  pyproject.toml  setup.py
package-admin/pt_pump_up_admin/: PT_Pump_Up.py
package-admin/pt_pump_up_admin/crud/: Crud.py  Dataset.py  Language.py
package-admin/src/pt_pump_up_admin/: CRUD.py  PTPumpUpAdmin.py  PT_Pump_Up_Admin.py  __init__.py
package-admin/src/pt_pump_up_admin/author/: Author.py  __init__.py
package-admin/src/pt_pump_up_admin/crawlers/: __init__.py  papers_with_code.py
package-admin/src/pt_pump_up_admin/crud/: Author.py  CRUD.py  Dataset.py  Model.py  NLPTask.py  NLP_Task.py  ResourceStats.py  Result.py
package-admin/src/pt_pump_up_admin/dataset/: Dataset.py  __init__.py
package-admin/src/pt_pump_up_admin/exceptions/: __init__.py
package-admin/src/pt_pump_up_admin/integration/: PapersWithCode.py  __init__.py
package-admin/src/pt_pump_up_admin/integration/papers_with_code/: Dataset.py  Element.py  Paper.py  __init__.py  utils.py
package-admin/src/pt_pump_up_admin/integrations/: HuggingFace.py  PapersWithCode.py
package-admin/src/pt_pump_up_admin/link/: Link.py  __init__.py
package-admin/src/pt_pump_up_admin/loader/: Loader.py
package-admin/src/pt_pump_up_admin/model/: Model.py
package-admin/src/pt_pump_up_admin/nlp_task/: NLP_Task.py  __init__.py
package-admin/src/pt_pump_up_admin/preservation_rating/: PreservationRating.py  Preservation_Rating.py  __init__.py
package-admin/src/pt_pump_up_admin/preservation_rating/ratings/: DatasetPreservationRating.py  ModelPreservationRating.py  __init__.py
package-admin/src/pt_pump_up_admin/resource_stats/: ResourceStats.py  __init__.py
package-admin/src/pt_pump_up_admin/result/: Result.py  __init__.py
package-admin/src/pt_pump_up_admin/server/: app.py
package-admin/tests/: .env.example  test_author.py  test_dataset.py  test_link.py  test_loader.py  test_model.py  test_nlp_tasks.py  test_resource_stats.py  test_submit.py
package-admin/tests/crawlers/: test_crawler_papers_with_code.py
package-admin/tests/crud/: test_author.py  test_dataset.py  test_link.py  test_model.py  test_nlp_tasks.py  test_resource_stats.py
package-admin/tests/loader/: test_loader.py
package-client/: .gitignore  README.md  publish.sh  pyproject.toml  setup.py
package-client/pt_pump_up/: PT_Pump_Up.py  utils.py
package-client/src/pt_pump_up/: PT_Pump_Up.py  __init__.py  utils.py
package-client/src/pt_pump_up/benchmarking/: TrainerFactory.py  __init__.py
package-client/src/pt_pump_up/benchmarking/callbacks/: EvalLossCallback.py  __init__.py
package-client/src/pt_pump_up/benchmarking/custom_pipelines/: srl_pipeline.py
package-client/src/pt_pump_up/datasets/: .gitignore
package-client/src/pt_pump_up/thrash/: questions_answering.py  register_pipelines.py  summarization.py
package-client/tests/: test_pt_pump_up.py
package-client/tests/datasets/: test_propbank_br.py
package-orms/: pyproject.toml
package-orms/src/pt_pump_up_orms/: ORM.py  __init__.py
package-orms/src/pt_pump_up_orms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
package-orms/src/pt_pump_up_orms/exception/: HTTPException.py
package-orms/src/pt_pump_up_orms/orms/: Author.py  Dataset.py  Link.py  Model.py  NLP_Task.py  ResourceStats.py  Result.py
(+450 files in other folders)
