[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pt_pump_up_orms"
version = "0.0.12"
description = "ORMs to interact with PT-Pump-Up Platform"
readme = "README.md"
authors = [
    {name = "Rúben Almeida", email = "ruben.f.almeida@inesctec.pt"},
    {name = "Alípio Jorge", email = "alipio.jorge@inesctec.pt"},
    {name = "Ricardo Campos", email = "ricardo.campos@inesctec.pt"},
    {name = "Sérgio Nunes", email = "sergio.nunes@inesctec.pt"},
]

requires-python = ">=3.10"

dependencies = [
    "pytest>=8.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pt_pump_up_orms", "pt_pump_up_orms.*"]
namespaces = false